--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -11,7 +11,7 @@
 
       <h3 class="mb-3">정보 수정</h3>
 
-      <form action="/users/<%= user.username %>?_method=put" method="post">
+      <form action="/users/<%= user.username %>?_method=put" enctype="multipart/form-data" method="post">
 
         <div class="form-group row">
           <label for="currentPassword" class="col-sm-3 col-form-label">현재 비밀번호*</label>
@@ -71,6 +71,25 @@
             <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>">
             <% if(errors.passwordConfirmation){ %>
               <span class="invalid-feedback"><%= errors.passwordConfirmation.message %></span>
+            <% } %>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="profileImg" class="col-sm-3 col-form-label">프로필 사진</label>
+          <div class="col-sm-9 col-sm-offset-3">
+            <input type="hidden" id="profileImg" name="profileImg" value="<%= user.profileImg?user.profileImg:'' %>">
+            <% if(user.profileImg){ %>
+              <div class="input-group mb-3" id="currentprofileImg">
+                <input type="text" class="form-control" value="<%= user.profileImg %>" readonly />
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" onclick="$('#profileImg').val('');$('#currentprofileImg').hide();$('#newprofileImg').removeClass('d-none');">삭제</button>
+                </div>
+              </div>
+            <% } %>
+            <input type="file" id="newprofileImg" class="form-control-file <%= user.profileImg?'d-none':'' %>" name="newprofileImg">
+            <% if(errors.profileImg){ %>
+              <span class="invalid-feedback"><%= errors.profileImg.message %></span>
             <% } %>
           </div>
         </div>
