--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -11,7 +11,7 @@
 
       <h3 class="contentBoxTop mb-3">회원가입</h3>
 
-      <form action="/users" method="post">
+      <form action="/users" enctype="multipart/form-data" method="post">
 
         <div class="form-group row">
           <label for="username" class="col-sm-3 col-form-label">아이디*</label>
@@ -56,6 +56,12 @@
             <% if(errors.passwordConfirmation){ %>
               <span class="invalid-feedback"><%= errors.passwordConfirmation.message %></span>
             <% } %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="profileImg" class="col-sm-3 col-form-label">프로필 이미지</label>
+          <div class="col-sm-9 col-sm-offset-3">
+            <input type="file" id="profileImg" name="proflieImg" class="form-control-file">
           </div>
         </div>
         <p>
