--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -98,7 +98,7 @@
         <% } %>
 
         <div class="mt-3"> <!-- 2 -->
-          <a class="btn btn-primary" href="/posts/new?bookId=<%= book._id %><%= getPostQueryString() %>">작성</a>
+          <a class="btn btn-primary" href="/posts/new?bookId=<%= book._id %><%= getPostQueryString(true) %>">작성</a>
         </div>
       </div>
 
