--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="gallery" id="gimcheon">
-        <h5 class="mb-3">배스트 셀러</h5>
+        <h5 class="mb-3">베스트 셀러</h5>
         <div class="gimcheon">
           <% if (isNaN(gimcheon)) { %>
             <% gimcheon.forEach(function(book) { %>
