--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -20,7 +20,7 @@
                   </div>
               </div>
             <% }) %>
-            <div class="card mb-1 home-card" style="width: 10rem; cursor:pointer;" onclick="location.href='/books';">
+            <div class="card mb-1 home-card" style="width: 10rem; cursor:pointer;" onclick="location.href='/books?type=인기';">
               <div class="card-body p-2" style="text-overflow:ellipsis; overflow:hidden; white-space:nowrap">
                 <a><h7 class="card-title ellipsis">더보기</h7></a>
               </div>
@@ -42,7 +42,7 @@
                   </div>
               </div>
             <% }) %>
-            <div class="card mb-1 home-card" style="width: 10rem; cursor:pointer;" onclick="location.href='/books';">
+            <div class="card mb-1 home-card" style="width: 10rem; cursor:pointer;" onclick="location.href='/books?type=베스트';">
               <div class="card-body p-2" style="text-overflow:ellipsis; overflow:hidden; white-space:nowrap">
                 <a><h7 class="card-title ellipsis">더보기</h7></a>
               </div>
